# IRM-CNKI-metadata-crawler

./: .gitignore  CLAUDE.md  CNKI_crawl_analysis.md  README.md  journals.csv  pyproject.toml  setup.ps1  setup.sh
src/cnki_crawler/: article.py  browser.py  exporter.py  journal.py  main.py  models.py  progress.py  session.py  utils.py
