[project]
name = "cnki-metadata-crawler"
version = "0.3.0"
description = "CNKI 期刊论文元信息爬虫"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "DrissionPage>=4.1.1.2",
    "lxml>=6.0.2",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
